--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,12 @@
     text-align: center;
     color: white;
 }
-.conteo{
+
+.conteo {
     margin: 50px 0;
 }
-.titleDate{
+
+.titleDate {
     margin: 20px 0;
 }
 
@@ -67,4 +69,77 @@
     margin-top: 5px;
     font-size: 0.75em;
     color: #666;
+}
+
+.titleInfo,
+.titleCaja {
+    font-size: 35px;
+    text-align: center;
+    font-family: "Bebas Neue", sans-serif;
+}
+
+.textInfo {
+    font-family: "Source Sans 3", sans-serif;
+    font-size: 18px;
+    padding: 20px;
+    text-align: center;
+}
+
+.cnt-cajas {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 0 0;
+}
+
+.caja1, .caja2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin-bottom: 20px;
+    text-align: left;
+    border: 1px solid rgb(233, 233, 233);
+    border-radius: 13px;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+}
+.caja1, .caja2{
+    width: 360px;
+}
+.caja{
+    height: 200px;
+}
+.caja2{
+    height: 230px;
+}
+
+.bi-check-circle-fill {
+    padding-right: 10px;
+    color: var(--colorTwo);
+}
+
+.titleCaja {
+    padding-bottom: 13px;
+    font-size: 30px;
+}
+
+.caja ol li {
+    font-size: 18px;
+    line-height: 1.5;
+    font-family: "Source Sans 3", sans-serif;
+}
+.cnt-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn-one{
+    font-family: "Source Sans 3", sans-serif;
+    padding: 20px;
+    border: none;
+    background-color: var(--colorTwo);
+    color: white;
+    border-radius: 10px;
 }
