--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@
 }
 
 .titleH1 {
+    padding: 0 21px;
     line-height: 1.1;
     font-family: "Bebas Neue", sans-serif;
     font-size: 70px;
@@ -300,7 +301,11 @@ form {
 
 @media screen and (min-width: 768px) {
     .titleH1 {
-        padding: 0 80px;
+        font-size: 80px;
+        padding: 0 19%;
+    }
+    .estrellas {
+        width: 60px;
     }
 
     .titleInfo {
@@ -321,16 +326,18 @@ form {
     }
 
     .cnt-general {
-        height: 50vh;
+        height: 30vh;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .titleH1 {
-        font-size: 70px;
-        padding: 0px 100px;
+        font-size: 100px;
+        padding: 0px 20%;
     }
-
+    .estrellas {
+        width: 80px;
+    }
     .titleDate {
         font-size: 50px;
         margin: 20px 0;
@@ -396,13 +403,8 @@ form {
     }
 
     .cnt-general {
-        height: 70vh;
+        height: 40vh;
     }
-
-    .titleH1 {
-        padding: 0px 19%;
-    }
-
     .titleInfo,
     .titlePerfil {
         padding: 0 24%;
